bed bath and beyond registry link

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
             <div class="call-to-action">
                 <h2>Check out our registries!</h2>
                 <a href="http://www.amazon.com/registry/wedding/2ZHISZD8VF9EV" target="_blank" class="btn btn-default btn-xl wow tada">Amazon</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <a href="http://www.bedbathandbeyond.com/" target="_blank" class="btn btn-default btn-xl wow tada">Bed, Bath & Beyond</a>
+                <a href="https://www.bedbathandbeyond.com/store/giftregistry/view_registry_guest.jsp?registryId=542689296&eventType=Wedding" target="_blank" class="btn btn-default btn-xl wow tada">Bed, Bath & Beyond</a>
             </div>
         </div>
     </aside>
