added a bunch of dummy sections

--- a/index.html
+++ b/index.html
@@ -56,16 +56,13 @@
                         <a class="page-scroll" href="#about">About Us</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Wedding Events</a>
+                        <a class="page-scroll" href="#wedding">Wedding Events</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Accommodations</a>
+                        <a class="page-scroll" href="#adventures">Adventures</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Registry</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#portfolio">Guest Book</a>
+                        <a class="page-scroll" href="#registry">Registry</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact Us</a>
@@ -95,13 +92,13 @@
                     <h2 class="section-heading">Frederick and Stephanie</h2>
                     <hr class="light">
                     <p class="text-faded">Stephanie and Frederick met at Northwestern University as undergraduates in Mathematics. After a short year together, they were separated by distance with Stephanie going to graduate school at Purdue followed by Frederick going to UCLA. However, they tried to see each other as often as possible, often times through cross-country red-eye flights. Now they are happily together in the same city, San Francisco, and can't wait to get married at Frederick's childhood home in Merritt Island!</p>
-                    <a href="#services" class="btn btn-default btn-xl">The Wedding!</a>
+                    <a href="#wedding" class="btn btn-default btn-xl">The Wedding!</a>
                 </div>
             </div>
         </div>
     </section>
 
-    <section id="services">
+    <section id="wedding">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -116,35 +113,35 @@
                     <div class="service-box">
                         <i class="fa fa-4x fa-heart wow bounceIn text-primary"></i>
                         <h3>The Ceremony</h3>
-                        <p class="text-muted">Our templates are updated regularly so they don't break.</p>
+                        <p class="text-muted">Held at Frederick's childhood home in Merritt Island, FL.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-music wow bounceIn text-primary" data-wow-delay=".1s"></i>
                         <h3>The Reception</h3>
-                        <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+                        <p class="text-muted">To follow the ceremony with lots of tasty food and fun dancing.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".2s"></i>
+                        <i class="fa fa-4x fa-car wow bounceIn text-primary" data-wow-delay=".2s"></i>
                         <h3>Transportation</h3>
-                        <p class="text-muted">We update dependencies to keep things fresh.</p>
+                        <p class="text-muted">Travel tips to and around Merritt Island; nearest airport: MCO.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-bed wow bounceIn text-primary" data-wow-delay=".3s"></i>
                         <h3>Accommodations</h3>
-                        <p class="text-muted">You have to make your websites with love these days!</p>
+                        <p class="text-muted">Check out our hotel blocks but also check out Airbnb!</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="no-padding" id="portfolio">
+    <section class="no-padding" id="adventures">
         <div class="container-fluid">
             <div class="row no-gutter">
                 <div class="col-lg-4 col-sm-6">
@@ -241,7 +238,7 @@
         </div>
     </section>
 
-    <aside class="bg-dark">
+    <aside class="bg-dark" id="registry">
         <div class="container text-center">
             <div class="call-to-action">
                 <h2>Check out our registries!</h2>
@@ -250,6 +247,79 @@
             </div>
         </div>
     </aside>
+
+    <section id="ceremony">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">The Ceremony</h2>
+                    <hr class="primary">
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-heart wow bounceIn text-primary"></i>
+                        <h3>The Ceremony</h3>
+                        <p class="text-muted">Held at Frederick's childhood home in Merritt Island, FL.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <section class="bg-primary" id="reception">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <h2 class="section-heading">The Reception</h2>
+                    <hr class="light">
+                    <p class="text-faded">Stephanie and Frederick met at Northwestern University as undergraduates in Mathematics. After a short year together, they were separated by distance with Stephanie going to graduate school at Purdue followed by Frederick going to UCLA. However, they tried to see each other as often as possible, often times through cross-country red-eye flights. Now they are happily together in the same city, San Francisco, and can't wait to get married at Frederick's childhood home in Merritt Island!</p>
+                    <a href="#wedding" class="btn btn-default btn-xl">The Wedding!</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <section id="transportation">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Transportation</h2>
+                    <hr class="primary">
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-car wow bounceIn text-primary" data-wow-delay=".2s"></i>
+                        <h3>Transportation</h3>
+                        <p class="text-muted">Travel tips to and around Merritt Island; nearest airport: MCO.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="bg-primary" id="accommodation">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <h2 class="section-heading">Accommodations</h2>
+                    <hr class="light">
+                    <p class="text-faded">Stephanie and Frederick met at Northwestern University as undergraduates in Mathematics. After a short year together, they were separated by distance with Stephanie going to graduate school at Purdue followed by Frederick going to UCLA. However, they tried to see each other as often as possible, often times through cross-country red-eye flights. Now they are happily together in the same city, San Francisco, and can't wait to get married at Frederick's childhood home in Merritt Island!</p>
+                    <a href="#wedding" class="btn btn-default btn-xl">The Wedding!</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <section id="contact">
         <div class="container">
