--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Transportation</h2>
                     <hr class="light">
-                    <p class="text-faded">More information to come. For out of town guests, we recommend renting a car for ease of transportation. We will provide a bus to and from the ceremony to one of the above hotels.</p>
+                    <p class="text-faded">More information to come. For out of town guests, we recommend renting a car for ease of transportation. We will provide a bus to and from the ceremony the day of the wedding to one of the above hotels.</p>
                     <a href="#contact" class="btn btn-default btn-xl">Contact us</a>
 
                 </div>
