--- a/index.html
+++ b/index.html
@@ -86,8 +86,9 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-                <h1>STEPHANIE and FREDERICK</h1>
+                <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><!-- 
+                <h1>STEPHANIE and FREDERICK</h1> -->
+                <h1><font color ="FFFFFF" >FEBRUARY 06, 2016</font></h1>
                 <hr>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Our Story</a>
             </div>
@@ -122,7 +123,7 @@
                     <div class="service-box">
                         <a class="page-scroll" href="#ceremony"><i class="fa fa-4x fa-heart wow bounceIn text-primary"></i>
                         <h3>The Ceremony</h3></a>
-                        <p class="text-muted">Held at Frederick's childhood home in Merritt Island, FL.</p>
+                        <p class="text-muted">Held at Frederick's childhood home in Merritt Island, FL on 2/6/16.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
