added drss code

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     <div class="service-box">
                         <a class="page-scroll" href="#ceremony"><i class="fa fa-4x fa-heart wow bounceIn text-primary"></i>
                         <h3>The Ceremony</h3></a>
-                        <p class="text-muted">Held at Frederick's childhood home in Merritt Island, FL on 2/6/16.</p>
+                        <p class="text-muted">Held at Frederick's childhood home in Merritt Island, FL on 2/6/16. Formal dress.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -303,7 +303,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">The Ceremony</h2>
                     <hr class="primary">
-                    <p>Held at Frederick's childhood home in Merritt Island, FL. The Ceremony will begin outdoors at 4 p.m.</p>
+                    <p>Held at Frederick's childhood home in Merritt Island, FL. The Ceremony will begin outdoors at 4 p.m. Formal dress. </p>
 
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3512.4415930554005!2d-80.688232!3d28.315234999999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88de024e1ff69309%3A0xbb4819ddcf05fd3f!2s2340+S+Tropical+Trail%2C+Merritt+Island%2C+FL+32952!5e0!3m2!1sen!2sus!4v1447484590300" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </div>
