--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     <div class="service-box">
                         <a class="page-scroll" href="#ceremony"><i class="fa fa-4x fa-heart wow bounceIn text-primary"></i>
                         <h3>The Ceremony</h3></a>
-                        <p class="text-muted">Held at Frederick's childhood home in Merritt Island, FL on 2/6/16. Formal dress.</p>
+                        <p class="text-muted">Held at Frederick's childhood home in Merritt Island, FL on 2/6/16 at 4 pm. Formal dress.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -157,7 +157,7 @@
                     <div class="service-box">
                         <a class="page-scroll" href="#transportation"><i class="fa fa-4x fa-car wow bounceIn text-primary" data-wow-delay=".3s"></i>
                         <h3>Transportation</h3></a>
-                        <p class="text-muted">Travel tips to and around Merritt Island; nearest airport: MCO.</p>
+                        <p class="text-muted">Travel information to and from the wedding; nearest airport: MCO.</p>
                     </div>
                 </div>
             </div>
@@ -303,7 +303,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">The Ceremony</h2>
                     <hr class="primary">
-                    <p>Held at Frederick's childhood home in Merritt Island, FL. The Ceremony will begin outdoors at 4 p.m. Formal dress. </p>
+                    <p>Held at Frederick's childhood home in Merritt Island, FL. The Ceremony will begin outdoors at 4 p.m. Formal dress. There will be limited parking (40 spots). Car pooling is highly recommended. There will also be a shuttle departing from the Hilton Cocoa Beach Oceanfront hotel. Check out the <a class="page-scroll" href="#transportation">transportation</a> section for more details.</p>
 
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3512.4415930554005!2d-80.688232!3d28.315234999999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88de024e1ff69309%3A0xbb4819ddcf05fd3f!2s2340+S+Tropical+Trail%2C+Merritt+Island%2C+FL+32952!5e0!3m2!1sen!2sus!4v1447484590300" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </div>
@@ -319,7 +319,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">The Reception & RSVP</h2>
                     <hr class="light">
-                    <p class="text-faded">The reception will be held at the same place as the ceremoy, at <a class="page-scroll" href="#ceremony" style = "color: #FFFFFF">Frederick's parents' home in Merritt Island</a>. There will be a cocktail hour after the ceremony, followed by a buffet dinner, much dancing and merriment. Please RSVP and specify any dietary restrictions below.</p>
+                    <p class="text-faded">The reception will be held at the same place as the ceremoy, at <a class="page-scroll" href="#ceremony" style = "color: #FFFFFF">Frederick's parents' home in Merritt Island</a>. There will be a cocktail hour and lawn games after the ceremony, followed by a buffet dinner, much dancing and merriment. Please RSVP and specify any dietary restrictions below.</p>
             
                     <iframe src="https://docs.google.com/forms/d/1kdhMoDaJTJFN37cWosWW3V6jEpv_hZd5n40AMUVIy2I/viewform?embedded=true" width="100%" height="830" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
             
@@ -404,7 +404,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Transportation</h2>
                     <hr class="light">
-                    <p class="text-faded">More information to come. For out of town guests, we recommend renting a car for ease of transportation. We will provide a bus to and from the ceremony the day of the wedding to one of the above hotels.</p>
+                    <p class="text-faded">For out of town guests, we recommend renting a car for ease of transportation. There will be a shuttle from the <a class="page-scroll" href="#accommodation" style = "color: #FFFFFF">Hilton Cocoa Beach Oceanfront</a> at 3 pm to the ceremony location. The bus will return at 10 pm to the hotel. If you would like to take the shuttle, feel free to <a href="mailto:wedding@frederickrobinson.com" target="_blank" style = "color: #FFFFFF">email</a> us for our convenience.</p>
                     <a href="#contact" class="btn btn-default btn-xl">Contact us</a>
 
                 </div>
